// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CandidateSessionView scheduling states renders locked state with countdown and day windows 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-3xl space-y-6 p-6 text-center"
  >
    <div>
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Almost there — your Trial is scheduled
      </h1>
      <p
        class="mt-2 text-sm leading-relaxed text-gray-600"
      >
        Infra Trial (Backend Engineer) stays calm and locked until Day 1 opens. Take a breath; we'll meet you at the start line.
      </p>
    </div>
    <div
      class="mx-auto max-w-lg rounded-2xl border border-wheat-100 bg-wheat-50/70 px-8 py-10 text-center text-wheat-950"
    >
      <p
        class="text-sm font-medium text-wheat-900"
      >
        Day 1 unlocks in
      </p>
      <div
        class="mt-4 flex justify-center"
      >
        <span
          data-testid="countdown-timer"
        >
          2d 01h
        </span>
      </div>
      <p
        class="mt-6 text-xs text-wheat-800"
      >
        We'll email you when it begins.
      </p>
      <p
        class="mt-3 text-xs text-wheat-800 tabular-nums"
      >
        Thu, Jan 1, 2099 · 9:00 AM · America/New_York
      </p>
    </div>
    <div
      class="rounded-md border border-gray-200 p-4"
    >
      <h2
        class="text-sm font-semibold text-gray-900"
      >
        5-day schedule preview
      </h2>
      <ul
        class="mt-2 space-y-2"
      >
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 1 — Planning & Design Doc
          </div>
          <div
            class="text-gray-700"
          >
            Thu, Jan 1, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 2 — Implementation Kickoff
          </div>
          <div
            class="text-gray-700"
          >
            Fri, Jan 2, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 3 — Implementation Wrap-Up
          </div>
          <div
            class="text-gray-700"
          >
            Sat, Jan 3, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 4 — Handoff + Demo
          </div>
          <div
            class="text-gray-700"
          >
            Sun, Jan 4, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 5 — Reflection Essay
          </div>
          <div
            class="text-gray-700"
          >
            Mon, Jan 5, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
      </ul>
      <p
        class="mt-3 text-xs text-gray-600"
      >
        Current window state: upcoming
      </p>
    </div>
    <button
      class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-elevated text-primary border-strong hover:bg-secondary focus:ring-wheat-500 px-4 py-2 text-sm"
    >
      Refresh
    </button>
  </div>
</DocumentFragment>
`;

exports[`CandidateSessionView scheduling states renders scheduling confirm state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-3xl space-y-5 p-6"
  >
    <div>
      <h1
        class="text-lg font-semibold text-gray-900"
      >
        Schedule your Trial start
      </h1>
      <p
        class="mt-1 text-sm font-medium text-gray-800"
      >
        Backend Engineer · Infra Trial
      </p>
      <p
        class="mt-2 text-sm leading-relaxed text-gray-600"
      >
        Pick Day 1 on your calendar. 
        <span
          class="text-gray-800"
        >
          Your Trial unlocks at 9 AM your local time. Days 1–4 close at 5 PM. Day 5 closes at 9 PM as a kindness — reflection deserves space.
        </span>
      </p>
    </div>
    <div
      class="rounded-md border border-slate-200 bg-slate-50 p-4"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <h3
          class="text-sm font-semibold text-slate-900"
        >
          AI-assisted evaluation notice
        </h3>
        <span
          class="inline-flex items-center rounded-full border border-slate-300 bg-white px-2 py-0.5 text-xs text-slate-700"
        >
          Notice mvp1
        </span>
      </div>
      <ul
        class="mt-2 list-disc space-y-1 pl-5 text-sm text-slate-700"
      >
        <li>
          Your Day 4 video and transcript may be used for evaluation by our team and AI-assisted review tools.
        </li>
        <li>
          Reviewers use this material to assess communication clarity and technical reasoning.
        </li>
      </ul>
      <a
        class="mt-2 inline-block text-sm text-wheat-700 underline"
        href="/candidate/what-we-evaluate"
      >
        What we evaluate
      </a>
    </div>
    <div
      class="space-y-4 rounded-md border border-gray-200 p-4"
    >
      <div
        class="rounded-md border border-wheat-100 bg-wheat-50 p-3 text-sm text-wheat-900"
      >
        <p>
          Day 1 will unlock on 
          <span
            class="font-semibold"
          >
            Thu, Jan 1, 2099
          </span>
           at 
          <span
            class="font-semibold"
          >
            9:00 AM (America/New_York)
          </span>
          .
        </p>
        <p
          class="mt-2"
        >
          We'll email you a calendar invite and reminders.
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-700"
        >
          GitHub username: 
          <span
            class="font-semibold"
          >
            octocat
          </span>
        </p>
      </div>
      <div>
        <h2
          class="text-sm font-semibold text-gray-900"
        >
          5-day schedule preview
        </h2>
        <ul
          class="mt-2 space-y-2"
        >
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 1 — Planning & Design Doc
            </div>
            <div
              class="text-gray-700"
            >
              Thu, Jan 1, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 2 — Implementation Kickoff
            </div>
            <div
              class="text-gray-700"
            >
              Fri, Jan 2, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 3 — Implementation Wrap-Up
            </div>
            <div
              class="text-gray-700"
            >
              Sat, Jan 3, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 4 — Handoff + Demo
            </div>
            <div
              class="text-gray-700"
            >
              Sun, Jan 4, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 5 — Reflection Essay
            </div>
            <div
              class="text-gray-700"
            >
              Mon, Jan 5, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
        </ul>
      </div>
      <div
        class="flex gap-3 pt-1"
      >
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-elevated text-primary border-strong hover:bg-secondary focus:ring-wheat-500 px-4 py-2 text-sm"
        >
          Back
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-wheat-500 text-on-accent border-transparent hover:bg-wheat-700 focus:ring-wheat-500 px-4 py-2 text-sm"
        >
          Confirm and lock in
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CandidateSessionView scheduling states renders scheduling form state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-3xl space-y-5 p-6"
  >
    <div>
      <h1
        class="text-lg font-semibold text-gray-900"
      >
        Schedule your Trial start
      </h1>
      <p
        class="mt-1 text-sm font-medium text-gray-800"
      >
        Backend Engineer · Infra Trial
      </p>
      <p
        class="mt-2 text-sm leading-relaxed text-gray-600"
      >
        Pick Day 1 on your calendar. 
        <span
          class="text-gray-800"
        >
          Your Trial unlocks at 9 AM your local time. Days 1–4 close at 5 PM. Day 5 closes at 9 PM as a kindness — reflection deserves space.
        </span>
      </p>
    </div>
    <div
      class="rounded-md border border-slate-200 bg-slate-50 p-4"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <h3
          class="text-sm font-semibold text-slate-900"
        >
          AI-assisted evaluation notice
        </h3>
        <span
          class="inline-flex items-center rounded-full border border-slate-300 bg-white px-2 py-0.5 text-xs text-slate-700"
        >
          Notice mvp1
        </span>
      </div>
      <ul
        class="mt-2 list-disc space-y-1 pl-5 text-sm text-slate-700"
      >
        <li>
          Your Day 4 video and transcript may be used for evaluation by our team and AI-assisted review tools.
        </li>
        <li>
          Reviewers use this material to assess communication clarity and technical reasoning.
        </li>
      </ul>
      <a
        class="mt-2 inline-block text-sm text-wheat-700 underline"
        href="/candidate/what-we-evaluate"
      >
        What we evaluate
      </a>
    </div>
    <div
      class="space-y-4 rounded-md border border-gray-200 p-4"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-800"
          for="schedule-start-date"
        >
          Day 1 start date
        </label>
        <input
          aria-invalid="false"
          aria-label="Day 1 start date"
          class="block w-full rounded-md border border-strong bg-primary px-3 py-2 text-sm shadow-sm focus:border-wheat-500 focus:outline-none focus:ring-1 focus:ring-wheat-500 text-primary border-wheat-400 bg-wheat-50/40"
          id="schedule-start-date"
          max="2026-05-31"
          min="2026-05-17"
          type="date"
          value="2099-01-01"
        />
        <p
          class="mt-1 text-xs text-gray-500"
        >
          Choose any date through your 14-day window. Weekend starts require the toggle below.
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <input
          class="h-4 w-4 rounded border-gray-300 text-wheat-700 focus:ring-wheat-500"
          id="schedule-include-weekends"
          type="checkbox"
        />
        <label
          class="text-sm text-gray-800"
          for="schedule-include-weekends"
        >
          Show weekends (Sat–Sun) as selectable start days
        </label>
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-800"
          for="schedule-timezone"
        >
          Timezone
        </label>
        <input
          aria-invalid="false"
          aria-label="Timezone"
          class="block w-full rounded-md border border-strong bg-primary px-3 py-2 text-sm shadow-sm focus:border-wheat-500 focus:outline-none focus:ring-1 focus:ring-wheat-500 text-primary"
          id="schedule-timezone"
          list="candidate-timezone-list"
          placeholder="America/New_York"
          type="text"
          value="America/New_York"
        />
      </div>
      <datalist
        id="candidate-timezone-list"
      >
        <option
          value="America/New_York"
        />
        <option
          value="America/Chicago"
        />
      </datalist>
      <p
        class="text-xs text-gray-500"
      >
        Detected timezone: America/New_York
      </p>
      <div>
        <label
          class="block text-sm font-medium text-gray-800"
          for="schedule-github-username"
        >
          GitHub username
        </label>
        <input
          aria-invalid="false"
          aria-label="GitHub username"
          class="block w-full rounded-md border border-strong bg-primary px-3 py-2 text-sm shadow-sm focus:border-wheat-500 focus:outline-none focus:ring-1 focus:ring-wheat-500 text-primary"
          id="schedule-github-username"
          placeholder="octocat"
          type="text"
          value="octocat"
        />
      </div>
      <p
        class="text-xs text-gray-500"
      >
        Use the GitHub username connected to your Trial workspace.
      </p>
      <div
        class="rounded-md border border-wheat-100 bg-wheat-50 p-3 text-sm text-wheat-900"
      >
        Day 1 will unlock on 
        <span
          class="font-semibold"
        >
          Thu, Jan 1, 2099
        </span>
         at 
        <span
          class="font-semibold"
        >
          9:00 AM (America/New_York)
        </span>
        .
      </div>
      <div>
        <h2
          class="text-sm font-semibold text-gray-900"
        >
          Five-day window preview
        </h2>
        <ul
          class="mt-2 space-y-2"
        >
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 1 — Planning & Design Doc
            </div>
            <div
              class="text-gray-700"
            >
              Thu, Jan 1, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 2 — Implementation Kickoff
            </div>
            <div
              class="text-gray-700"
            >
              Fri, Jan 2, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 3 — Implementation Wrap-Up
            </div>
            <div
              class="text-gray-700"
            >
              Sat, Jan 3, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 4 — Handoff + Demo
            </div>
            <div
              class="text-gray-700"
            >
              Sun, Jan 4, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 5 — Reflection Essay
            </div>
            <div
              class="text-gray-700"
            >
              Mon, Jan 5, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
        </ul>
      </div>
      <div
        class="flex gap-3 pt-2"
      >
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-elevated text-primary border-strong hover:bg-secondary focus:ring-wheat-500 px-4 py-2 text-sm"
        >
          Back to portal
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-wheat-500 text-on-accent border-transparent hover:bg-wheat-700 focus:ring-wheat-500 px-4 py-2 text-sm"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
